<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_outlook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bakha.ms.outlook.ui.OutlookActivity"
    tools:showIn="@layout/app_bar_outlook">
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/sunday_short"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/calendar_header_item_height"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/monday_short"
            android:textColor="@android:color/white"
            android:textSize="@dimen/calendar_header_item_height"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/tuesday_short"
            android:textColor="@android:color/white"
            android:textSize="@dimen/calendar_header_item_height"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/wednesday_short"
            android:textColor="@android:color/white"
            android:textSize="@dimen/calendar_header_item_height"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/thursday_short"
            android:textColor="@android:color/white"
            android:textSize="@dimen/calendar_header_item_height"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/friday_short"
            android:textColor="@android:color/white"
            android:textSize="@dimen/calendar_header_item_height"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/calendar_header_height"
            android:gravity="center"
            android:text="@string/saturday_short"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/calendar_header_item_height"
            />
    </LinearLayout>
    <bakha.ms.outlook.ui.view.ExpandableView
        android:id="@+id/expandable_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_min_height">
        <GridView
            android:id="@+id/outlook_calendar_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:stretchMode="columnWidth"
            android:numColumns="7"/>
    </bakha.ms.outlook.ui.view.ExpandableView>
    <View
        android:id="@+id/shadow_view"
        android:layout_below="@+id/expandable_view"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/layout_shadow"
        >
    </View>
    <bakha.ms.outlook.ui.view.AgendaView
        android:id="@+id/agenda_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:groupIndicator="@null">

    </bakha.ms.outlook.ui.view.AgendaView>
</LinearLayout>
