<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/content_add_event"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="bakha.ms.outlook.ui.AddEventActivity"
        tools:showIn="@layout/activity_add_event">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_column_height"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/event_column_height"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/small_circle"
                />
            <EditText
                android:id="@+id/event_title"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:imeOptions="actionDone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_small_column_height"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <RelativeLayout
            android:layout_width="@dimen/event_column_height"
            android:layout_height="@dimen/event_small_column_height"
                android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_schedule_black_24dp"
                />
            </RelativeLayout>
            <TextView
                android:id="@+id/all_day_event_title"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/all_day_event"
                android:gravity="left|center" />

            <ToggleButton
                android:id="@+id/all_day_toggle"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:checked="false"
                android:background="@drawable/toggle_selector"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="@dimen/event_column_height"
                android:layout_height="wrap_content"
                android:gravity="center">
            <!-- No icon is required here -->
            </RelativeLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/start_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/start_date"
                    android:clickable="true"/>
                <TextView
                    android:id="@+id/start_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/start_time"
                    android:clickable="true"/>
            </LinearLayout>
            <View
                android:layout_height="match_parent"
                android:layout_width="1dp"
                android:background="@drawable/layout_shadow" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/end_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/end_date"
                    android:clickable="true"/>
                <TextView
                    android:id="@+id/end_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/end_time"
                    android:clickable="true"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_column_height"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="@dimen/event_column_height"
                android:layout_height="@dimen/event_column_height"
                android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_place_black_24dp"
                />
            </RelativeLayout>
            <EditText
                android:id="@+id/event_location"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/location"
                android:lines="1"
                android:maxLines="1"
                android:gravity="left|center"
                android:inputType="textCapSentences"
                android:imeOptions="actionDone"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_column_height"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="@dimen/event_column_height"
                android:layout_height="@dimen/event_column_height"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_event_black_24dp"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/event_account"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/currentAccount"
                android:gravity="left|center" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/event_column_height"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:id="@+id/account_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:onClick="showAccountMenu">
                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/currentAccount"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/account_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:src="@drawable/ic_event_black_24dp"
                    />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_column_height"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="@dimen/event_column_height"
                android:layout_height="@dimen/event_column_height"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_notifications_black_24dp"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/event_alert"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/alert"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="left|center"
                android:clickable="true"/>
            <TextView
                android:id="@+id/event_alert_type"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/minutes_before_15"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="left|center"
                android:textSize="14dp"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_column_height"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="@dimen/event_column_height"
                android:layout_height="@dimen/event_column_height"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_assignment_black_24dp"
                    />
            </RelativeLayout>
            <EditText
                android:id="@+id/event_description"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/description"
                android:maxLines="3"
                android:gravity="left|center"
                android:inputType="textCapSentences"
                android:lines="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:windowSoftInputMode="adjustResize"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>