<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_event"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bakha.ms.outlook.ui.ViewEventActivity"
    tools:showIn="@layout/activity_view_event">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_column_height"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="@dimen/event_column_height"
            android:layout_height="@dimen/event_column_height"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@null"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:textSize="20dp"
                android:inputType="textCapSentences"
                android:textColor="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/account_title_text"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    android:maxLines="1"
                    android:textSize="14dp"
                    android:inputType="textCapSentences"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/account_email_text"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:textSize="14dp"
                    android:inputType="textCapSentences"
                    android:textColor="@android:color/darker_gray"
                    android:ellipsize="end"/>
            </LinearLayout>
            </LinearLayout>
    </LinearLayout>
    <View
        android:layout_height="3dp"
        android:layout_width="match_parent"
        android:background="@drawable/layout_shadow" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="@dimen/event_column_height"
            android:layout_height="@dimen/event_column_height"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_schedule_black_24dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/start_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/start_date"
                        android:clickable="true"/>
                    <TextView
                        android:id="@+id/start_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/start_time"
                        android:clickable="true"/>
                </LinearLayout>
                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="@drawable/layout_shadow" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/end_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/end_date"
                        android:clickable="true"/>
                    <TextView
                        android:id="@+id/end_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/end_time"
                        android:clickable="true"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@drawable/layout_shadow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_column_height"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="@dimen/event_column_height"
            android:layout_height="@dimen/event_column_height"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_notifications_black_24dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_alert_type"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/minutes_before_15"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="left|center"
                android:textSize="14dp"
                android:clickable="true"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@drawable/layout_shadow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/descr_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_column_height"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="@dimen/event_column_height"
            android:layout_height="@dimen/event_column_height"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_assignment_black_24dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_description"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:maxLines="3"
                android:gravity="left|center"
                android:inputType="textCapSentences"
                android:background="?android:attr/selectableItemBackground"
                android:textSize="14dp"
                android:lines="3"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@drawable/layout_shadow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_column_height"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="@dimen/event_column_height"
            android:layout_height="@dimen/event_column_height"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_place_black_24dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_location"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:gravity="left|center"
                android:textSize="14dp"
                android:inputType="textCapSentences"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@drawable/layout_shadow" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>